# hsr-lang-patcher

./: Cargo.toml  LICENSE  README.md
src/: allowed_language.rs  args.rs  design_data.rs  design_index.rs  main.rs
